# ocr_compare

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  README.md  babel.cfg  benchmark_report_template.md  entrypoint.sh  main.py  pyproject.toml  run_batch_ocr.py  start.sh  test_benchmark.py
app/api/: __init__.py  auth.py  document.py  user.py
app/core/: config.py  database.py  error_handle.py  extends_logger.py  i18n.py  middleware.py  security.py
app/models/: __init__.py  models.py
app/parser/: __init__.py  ocr_analyzer.py  ocr_benchmark.py  ocr_parser.py
app/routers/: __init__.py  router.py
app/schemas/: __init__.py  base.py  document.py  result.py  user.py
app/services/: document_service.py  user_service.py  websocket_manager.py
app/templates/: tag_import_template.xlsx
app/tests/apis/: test_api_document.py  test_api_user.py  test_auth.py  test_main.py
app/tests/service/: test_document_service.py  test_security.py
app/translations/en_US/LC_MESSAGES/: messages.po
app/translations/zh_CN/LC_MESSAGES/: messages.po
app/utils/: image_util.py  ocr_helper.py
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  babel.config.js  entrypoint.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: main.ts
frontend/src/api/: document.ts  interceptor.ts  user.ts
frontend/src/layout/: default-layout.vue
frontend/src/locale/: en-US.ts  index.ts  zh-CN.ts
frontend/src/router/: constants.ts  index.ts
frontend/src/store/: index.ts
postgres/init-scripts/: 01_init.sql  02_demo_data.sql
(+34 files in other folders)
